[lworld] C2 compilation fails with assert(!inline_alloc) failed: Inline type allocations should not have safepoint uses

XMLWordPrintable

      Originally reported my [~mcimadamore].

      # Internal Error (/oracle/valhalla/open/src/hotspot/share/opto/macro.cpp:1193), pid=671376, tid=671388
      # assert(!inline_alloc) failed: Inline type allocations should not have safepoint uses

      Current CompileTask:
      C2: 7354 84 b Test::test (47 bytes)

      Stack: [0x00007f688e196000,0x00007f688e297000], sp=0x00007f688e2924c0, free space=1009k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0xe9f5e1] PhaseMacroExpand::eliminate_allocate_node(AllocateNode*)+0x26d
      V [libjvm.so+0xea7464] PhaseMacroExpand::eliminate_macro_nodes()+0x2d8
      V [libjvm.so+0xea768d] PhaseMacroExpand::expand_macro_nodes()+0x19
      V [libjvm.so+0x7d9a9d] Compile::Optimize()+0xf3d
      V [libjvm.so+0x7d0291] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x11c7
      V [libjvm.so+0x6bb6e3] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x15b
      V [libjvm.so+0x7ee875] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x895
      V [libjvm.so+0x7ed501] CompileBroker::compiler_thread_loop()+0x3df
      V [libjvm.so+0x124bbd4] compiler_thread_entry(JavaThread*, Thread*)+0x69
      V [libjvm.so+0x1247a4a] JavaThread::thread_main_inner()+0x14c
      V [libjvm.so+0x12478f6] JavaThread::run()+0x11e
      V [libjvm.so+0x1243af6] Thread::call_run()+0x180
      V [libjvm.so+0x1028d02] thread_native_entry(Thread*)+0x1e4

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: