8255230: [lworld] C2 compilation fails with assert(\!inline_alloc) failed: Inline type allocations should not have safepoint uses