src/hotspot/share/opto/loopopts.cpp
@@ -1618,7 +1618,6 @@ void PhaseIdealLoop::split_if_with_blocks_post(Node *n) {
   // Remove multiple allocations of the same inline type
   if (n->is_InlineType()) {
     n->as_InlineType()->remove_redundant_allocations(&_igvn, this);
-    return; // n is now dead
   }
 
   // Check for Opaque2's who's loop has disappeared - who's input is in the
